feature : Correct handles responses : Align Swagger Docks
