# internal/domain/models/subscription.go
@@ -13,4 +13,6 @@ type Subscription struct {
 	UserID      uuid.UUID
 	StartDate   time.Time
 	EndDate     *time.Time
+	CreatedAt   time.Time
+	UpdatedAt   time.Time
 }
